--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.14)
 project(PriorityQueue)
 
-set(CMAKE_CXX_STANDARD 11)
+# set(CMAKE_CXX_STANDARD 11)
 set(BUILD_TESTS YES)
 
 
@@ -65,6 +65,5 @@ if(${BUILD_TESTS})
     include(GoogleTest)
     gtest_discover_tests(run-tests)
 endif()
-
 
 ##############################################################################
