--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,8 @@
 cmake_minimum_required(VERSION 3.14)
-project(PriorityQueue)
+project(Archiver)
 
-# set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 17)
 set(BUILD_TESTS YES)
-
 
 ##############################################################################
 # make archiver library
