--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 3.14)
 project(Archiver)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -Wall -O3")
-SET(CMAKE_CXX_STANDARD_REQUIRED 17)
-SET(CMAKE_BUILD_TYPE Debug)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -O3")
+SET(CMAKE_CXX_STANDARD_REQUIRED 11)
+SET(CMAKE_BUILD_TYPE Release)
 
 set(BUILD_TESTS NO)
 
